--- a/deck.mdx
+++ b/deck.mdx
@@ -13,7 +13,7 @@ export { theme } from "./theme";
 
 <Box>
   <Heading variant="h1">Cypress</Heading>
-  <p>The one things test shouldn't test, is your patience</p>
+  <p>The one thing test shouldn't test is your patience</p>
 </Box>
 
 ---
